updated hompage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sachin1540.github.io/react-client-project",
+  "homepage": "https://sachin1540.github.io/sachin1540.github.io",
   "name": "react-client-project",
   "version": "0.1.0",
   "private": true,
